# HW29

./: pyproject.toml
HW29/: settings.py  urls.py
ads/: models.py
ads/migrations/: 0001_initial.py
ads/serializers/: __init__.py
ads/views/ad/: viewset.py
users/: models.py
users/migrations/: 0001_initial.py
users/serializers/: users.py
users/urls/: user.py
